--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: "3"
-
+networks:
+  traefik:
+    external: true
 services:
   web:
     image: nginx:latest
@@ -13,6 +15,8 @@ services:
     labels:
       - "traefik.docker.network: traefik"
       - "traefik.frontend.rule=Host:codereach.ca"
+    networks:
+      - traefik
   php:
     image: php:7-fpm
     volumes:
