--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,14 @@ services:
     labels:
       - "traefik.docker.network: traefik"
       - "traefik.frontend.rule=Host:codereach.ca"
+    networks:
+      - traefik
   php:
     image: php:7-fpm
     volumes:
       - ./webroot:/webroot
+    networks:
+      - traefik
+networks:
+  traefik:
+    external: true
