no weird network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3"
 services:
-  proxy:
-    image: traefik:latest
-    command: --web --docker --docker.domain=codereach.local --logLevel=DEBUG
-    networks:
-      - traefik
-    ports:
-      - 80:80
-      - 443:443
-      - 8080:8080
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /etc/traefik/traefik.toml:/traefik.toml
+  #  proxy:
+  #    image: traefik:latest
+  #    command: --web --docker --docker.domain=codereach.local --logLevel=DEBUG
+  #    networks:
+  #      - traefik
+  #    ports:
+  #      - 80:80
+  #      - 443:443
+  #      - 8080:8080
+  #    volumes:
+  #      - /var/run/docker.sock:/var/run/docker.sock
+  #      - /etc/traefik/traefik.toml:/traefik.toml
   web:
     image: nginx:latest
     ports:
