--- a/site.conf
+++ b/site.conf
@@ -1,6 +1,7 @@
 server {
+    listen 80 default_server;
+    server_name _;
     index index.php index.html;
-    server_name php-docker.local;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /webroot;
@@ -8,7 +9,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass codereach_php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
