--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,14 +24,14 @@ services:
       - "traefik.enable=true"
     networks:
       - traefik
-  #    image: "${CI_REGISTRY}/${CI_PROJECT_PATH}/nginx:latest"
+      image: "${CI_REGISTRY}/${CI_PROJECT_PATH}/nginx:latest"
   codereach_php:
     build:
       context: .
       dockerfile: php/Dockerfile
     networks:
       - traefik
-#    image: "${CI_REGISTRY}/${CI_PROJECT_PATH}/php:latest"
+    image: "${CI_REGISTRY}/${CI_PROJECT_PATH}/php:latest"
 networks:
   traefik:
     external: true
