--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,8 @@ build:
     - "docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY"
     - "docker build -t ${CI_REGISTRY}/${CI_PROJECT_PATH}/nginx:latest --pull ."
     - "docker build -t ${CI_REGISTRY}/${CI_PROJECT_PATH}/php:latest --pull -f ./php/Dockerfile ."
-    - "docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}:latest"
+    - "docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/nginx:latest"
+    - "docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/php:latest"
   after_script:
     - "docker logout ${CI_REGISTRY}"
 deploy:
